# udsp38-scheduler-notification

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-test.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: common.yml  prod.yml  test.yml
app/api/: jobs.py  router.py
app/api/router/: jobs_router.py  notifications_router.py  router.py
app/core/: adapter_ipv4.py  config.py  firebase.py  scheduler.py
app/dtos/requests/: archiver_publication_dto.py  notifier_utilisateurs_dto.py  programmer_publication_dto.py  supprimer_job_dto.py
app/dtos/responses/: job_programmation_dto.py
app/services/: http_service.py  jobs_service.py  notification_service.py
