[project]
name = "udsp38-scheduler-notification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi[standard]>=0.128.0",
    "firebase-admin>=7.1.0",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.45",
]

[dependency-groups]
dev = [
    "commitizen>=4.12.1",
    "pre-commit>=4.5.1",
    "ruff>=0.14.13",
]
